@@ -11,6 +11,7 @@ PHP                                                                        NEWS
   . Fixed use-of-uninitialized-value with ??= on assert. (ilutov)
   . Fixed bug GH-11601 (Incorrect handling of unwind and graceful exit
     exceptions). (ilutov)
+  . Added zend_call_stack_get implementation for OpenBSD. (David Carlier)
 
 - OpenSSL:
   . Added support for additional EC parameters in openssl_pkey_new. (Eno-CN)
